--- a/templates/core/contact.html
+++ b/templates/core/contact.html
@@ -17,15 +17,17 @@
                       <label for="name">Name</label>
                       <input type="text" id="name" class="form-control ">
                     </div>
-                    <div class="col-md-12 form-group">
-                      <label for="phone">Phone</label>
-                      <input type="text" id="phone" class="form-control ">
-                    </div>
+                    
                     <div class="col-md-12 form-group">
                       <label for="email">Email</label>
                       <input type="email" id="email" class="form-control ">
                     </div>
-                  </div>
+                  
+                  <div class="col-md-12 form-group">
+                      <label for="subject">Subject</label>
+                      <input type="text" id="subject" class="form-control ">
+                    </div>
+                    </div>
                   <div class="row">
                     <div class="col-md-12 form-group">
                       <label for="message">Write Message</label>
