--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -15,7 +15,7 @@
                       <span class="category mb-5">{{post.categories.name}}</span>
                       <div class="post-meta">
                         
-                        <span class="author mr-2"><img src="{{post.author.profile_image.url}}" alt="Colorlib"> {{post.author.first_name}}</span>&bullet;
+                        <span class="author mr-2"><img src="{{post.author.profile_image.url}}" alt="Colorlib"> {{post.author.get_full_name}}</span>&bullet;
                         <span class="mr-2">{{post.timestamp|date:"F d Y"}}</span>
                         
                       </div>
