--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -63,14 +63,22 @@
                 <li class="nav-item">
                   <a class="nav-link" id="home" href="{% url 'home' %}">Home</a>
                 </li>
+                {% if user.is_authetnicated %}
+                  <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" id="category" href="category.html" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
+                  <div class="dropdown-menu" aria-labelledby="dropdown05">
+                    <a class="dropdown-item" href="">View Profile</a>
+                    <a class="dropdown-item" href="">Log Out</a>
+                  </div>
+                </li>
+                {% endif %}
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" id="category" href="category.html" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories</a>
+                  <a class="nav-link dropdown-toggle" id="category" href="" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories</a>
                   <div class="dropdown-menu" aria-labelledby="dropdown05">
                     {% for category in categories %}
                     <a class="dropdown-item" href="{% url 'category' category.name %}">{{category}}</a>  
                     {% endfor %}
                   </div>
-
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" id="about" href="{% url 'about' %}">About</a>
@@ -78,6 +86,14 @@
                 <li class="nav-item">
                   <a class="nav-link" id="contact" href="{% url 'contact' %}">Contact</a>
                 </li>
+                {% if not user.is_authetnicated %}
+                  <li class="nav-item">
+                    <a class="nav-link" id="signup" href="">Sign Up</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" id="logout" href="">Log In</a>
+                  </li>
+                {% endif %}
               </ul>
               
             </div>
@@ -94,7 +110,7 @@
       <div class="col-md-12 col-lg-4 sidebar">
             
             <!-- END sidebar-box -->
-            <div class="sidebar-box">
+            <div class="sidebar-box" style="margin-top: 140px;">
               <div class="bio text-center">
                 <img src="{% static 'images/circle-cropped.png' %}" alt="Image Placeholder" class="img-fluid">
                 <div class="bio-body">
@@ -228,7 +244,7 @@
             <div class="col-md-12 text-center">
               <p class="small">
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy; <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All Rights Reserved <br> This template is made with <i class="fa fa-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a> and powered by Django.
+            Copyright &copy; <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All Rights Reserved <br> This template is made with <i class="fa fa-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a> and powered by <a href="https://www.djangoproject.com/" target="_blank">Django</a>.
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
             </div>
