--- a/templates/core/contact.html
+++ b/templates/core/contact.html
@@ -11,27 +11,28 @@
         <div class="row blog-entries">
           <div class="col-md-12 col-lg-8 main-content">
             
-            <form action="#" method="post">
+            <form action="{% url 'contact' %}" method="post">
+              {% csrf_token %}
                   <div class="row">
                     <div class="col-md-12 form-group">
                       <label for="name">Name</label>
-                      <input type="text" id="name" class="form-control ">
+                      <input type="text" id="name" name="name" class="form-control " required>
                     </div>
                     
                     <div class="col-md-12 form-group">
                       <label for="email">Email</label>
-                      <input type="email" id="email" class="form-control ">
+                      <input type="email" id="email" name="email" class="form-control " required>
                     </div>
                   
                   <div class="col-md-12 form-group">
                       <label for="subject">Subject</label>
-                      <input type="text" id="subject" class="form-control ">
+                      <input type="text" id="subject" name="subject" class="form-control " required>
                     </div>
                     </div>
                   <div class="row">
                     <div class="col-md-12 form-group">
                       <label for="message">Write Message</label>
-                      <textarea name="message" id="message" class="form-control " cols="30" rows="8"></textarea>
+                      <textarea name="message" id="message" name="message" class="form-control " cols="30" rows="8" required></textarea>
                     </div>
                   </div>
                   <div class="row">
