Add Signup,Login, Reset Pwd

--- a/templates/authentication/reset-password.html
+++ b/templates/authentication/reset-password.html
@@ -1,59 +1,44 @@
 {% extends "core/base.html" %}
 {% load static %}
-{% block title %}Sign Up{% endblock title %}
+{% block title %}Reset Password{% endblock title %}
 
     {% block content %}
         <div class="row mb-4">
           <div class="col-md-6 text-center">
-            <h1>Sign Up</h1>
+            <h1>Reset Password</h1>
           </div>
         </div>
         <div class="row blog-entries">
           <div class="col-md-12 col-lg-8 main-content">
-            
-            <form action="{% url 'signup' %}" method="post" id="signupForm">
+            {% if error %}
+        <div
+          class="alert alert-danger alert-dismissible fade show text-center"
+          role="alert"
+        >
+          {{error}}
+          <button
+            type="button"
+            class="close"
+            data-dismiss="alert"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        {% endif %}
+            <form action="" method="post" id="resetForm">
               {% csrf_token %}
                   <div class="row">
-                    <div class="col-md-6 form-group">
-                      <label for="name">First Name</label>
-                      <input type="text" id="fname" name="fname" class="form-control " required>
-                    </div>
-                    <div class="col-md-6 form-group">
-                      <label for="name">Last Name</label>
-                      <input type="text" id="lname" name="lname" class="form-control " required>
-                    </div>
-                    
-                    <div class="col-md-6 form-group">
+                    <div class="col-md-12 form-group">
                       <label for="email">Email</label>
                       <input type="email" id="email" name="email" class="form-control " required>
-                        <small>Please enter correct email only, we'll confirm.</small>
                         <div class="emailFeedBackArea invalid-feedback" style="display:none"></div>
                     </div>
-                    <div class="col-md-6 form-group">
-                      <label for="username">Username</label>
-                      <input type="text" id="username" name="username" class="form-control " required>
-                    <div class="usernameFeedBackArea invalid-feedback" style="display:none"></div>
-                    </div>
-                    
-                  <div class="col-md-6 form-group">
-                      <label for="password1">Password</label>
-                      <input type="password" id="password1" name="password1" class="form-control " required>
-                    </div>
-                  <div class="col-md-6 form-group">
-                      <label for="password2">Confirm Password</label>
-                      <input type="password" id="password2" name="password2" class="form-control " required>
-                    
-                    </div>
-                    
-                    </div>
-                    <div class="row col-md-12">
-                        <div class="passwordFeedBackArea invalid-feedback" style="display:none"></div>
                     </div>
                   <div class="row mt-3">
                       <div class="col-md-4"></div>
                     <div class="col-md-4 form-group">
                       <center><button type="button" id="sendOtpBtn" onClick="sendOTP()" class="btn btn-primary" disabled>Send OTP</button></center>
-                      
                     </div>
                       <div class="col-md-4"></div>
                   </div>
@@ -72,14 +57,24 @@
                         
                       </div>
                       </div>
-                      
+                    <div class="row">
+                        <div class="col-md-12 form-group" style="display: none;" id="newPassword">
+                            <label for="password1">Password</label>
+                            <input type="password" id="password" name="password" class="form-control " required>
+                            <div
+                                class="passwordFeedBackArea invalid-feedback"
+                                style="display: none"
+                            ></div>
+                            <button type="submit" class="btn btn-primary mt-3" id="changePasswordBtn">Change Password</button>
+                        
+                        </div>
+                    </div>
                 </form>
-            
           </div>
   
 {% endblock content %}
 {% block js_down %}
-<script src="{% static 'js/register.js' %}"></script>
+<script src="{% static 'js/reset-pswd.js' %}"></script>
   <script>
     var element = document.getElementById("signup")
     element.classList.add("active");
